--- a/Github_Organizacion de las Comutadoras/TP9/Piano.html
+++ b/Github_Organizacion de las Comutadoras/TP9/Piano.html
@@ -1,1 +1,133 @@
-a
+<div class = "base"></div>
+<div class = "uno"></div>
+<div class = "dos"></div>
+<div class = "tres"></div>
+<div class = "cuatro"></div>
+<div class = "cinco"></div>
+<div class = "seis"></div>
+<div class = "siete"></div>
+<div class = "N1"></div>
+<div class = "N2"></div>
+<div class = "N3"></div>
+<div class = "N4"></div>
+<div class = "N5"></div>
+
+<style>
+.base {
+    width: 180px;
+    height: 100px;
+    background: #191919;
+    border-radius: 10px;
+    margin-top: 100px;
+    margin-left: 110px;
+}
+.uno {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 115px;
+    position: absolute; 
+}
+.dos {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 140px;
+    position: absolute; 
+}
+.tres {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 165px;
+    position: absolute; 
+}
+.cuatro {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 190px;
+    position: absolute; 
+}
+.cinco {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 215px;
+    position: absolute; 
+}
+.seis {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 240px;
+    position: absolute; 
+}
+.siete {
+    width: 20px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-top: -75px;
+    margin-left: 265px;
+    position: absolute; 
+}
+.n1{
+    width: 15;
+    height: 60;
+    background: #191919;
+    margin-top: -100px;
+    margin-left: 130;
+    position: absolute;
+}
+.n2{
+    width: 15;
+    height: 60;
+    background: #191919;
+    margin-top: -100px;
+    margin-left: 155;
+    position: absolute;
+}
+.n3{
+    width: 15;
+    height: 60;
+    background: #191919;
+    margin-top: -100px;
+    margin-left: 205;
+    position: absolute;
+}
+.n4{
+    width: 15;
+    height: 60;
+    background: #191919;
+    margin-top: -100px;
+    margin-left: 230;
+    position: absolute;
+}
+.n5{
+    width: 15;
+    height: 60;
+    background: #191919;
+    margin-top: -100px;
+    margin-left: 255;
+    position: absolute;
+}
+
+body{
+    margin: 0;
+    background: #998235;
+}
+  
+</style>
