--- a/Prueba/Push Buttom #3.html
+++ b/Prueba/Push Buttom #3.html
@@ -1,1 +1,46 @@
+<div class = "uno"></div>
+<div class = "dos"></div>
+<div class = "tres"></div>
+<div class = "cuatro"></div>
 
+<style>
+.uno {
+    width: 300px;
+    height: 150px;
+    background: #243D83;
+    margin-top: 75px;
+    margin-left: 50px;
+  }
+.dos {
+    width: 250px;
+    height: 250px;
+    background: #6592CF;
+    margin-top: -200px;
+    margin-left: 75px;
+    border-radius: 50%;
+    position: absolute;
+  }
+.tres {
+    width: 150px;
+    height: 150px;
+    background: #243D83;
+    border-radius: 50%;
+    margin-top: -150px;
+    margin-left: 125px;
+    position: absolute;
+  }
+.cuatro {
+    width: 50px;
+    height: 50px;
+    background: #EEB850;
+    border-radius: 50%;
+    margin-top: -100px;
+    margin-left: 175px;
+    position: absolute;
+  }
+
+body {background: #6592CF;
+    margin: 0;
+}
+  
+</style>
